--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,12 @@ a:hover {
     height: auto;
 }
 
+#projects-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
 #education-skills-container .container {
     justify-content: space-around;
 }
